# java-rrdp-test-data

./: .gitignore  README.md  pyproject.toml  settings.gradle.kts  snapshot.sh
.github/workflows/: package.yml
lib/: build.gradle.kts
rrdp-test-data/: build.gradle.kts
rrdp-test-data/src/main/java/rrdp/test/data/: Library.java
rrdp-test-data/src/test/java/rrdp/test/data/: LibraryTest.java
